Release Changelog for VanasKoS

4.48:
- Fixed own name from appearing in warning frame
- Updated POI icons for death, and tie
- Fixed minor localization problems

4.47:
- Updated database to use Map Area IDs rather than zone text
- Remove obsolete Import code
- Fix bug not adding PvP events to map [ticket #74]
- Remove LFR Browser, fixes tainting when joining casual BGs [ticket #76]
- Don't send Chat messages from DistributedTracker while AFK [ticket #73]
- Update libraries

4.46:
- toc updated

4.45:
- Integrated fixes for 5.2 by Unrealomega

4.44:
- Updated Libraries

4.43:
- toc fix

4.42:
- Fix for Monks

4.41:
- Bugfix

4.40:
- Updated TOC and fixed some global leakage

4.33:
- Fixed bug friends frame docking

4.32:
- Update toc version for 4.3
- Update libraries
- Fixed bug in hatelist/nicelist chat coloring [ticket #62]
- Fixed bug restoring the saved warning window position
- Added option to change alignment in warning window
- Use guid hyperlink in gametooltip used by the warning window
- Fix bug toggling warning window active state

4.31:
- Update libraries
- Use WoW's built-in localization string for "No player currently named..." spam filtering

4.30:
- Update toc version for 4.2
- Fix bug causing map to zoom to cosmic level in battlegrounds
- Automatic synchronization

4.29:
- Update toc version for 4.1
- Update libraries
- Fix bug due to blizzard api changes in COMBAT_LOG_EVENT_UNFILTERED

4.28:
- Update libraries (including liblevelguess)
- More ability to disable data gathering/notifications by zone type
- Remove events by right clicking icons on map
- Event map speed improvements
- Add entry from PvP stats
- Fix error on right click when a module is missing
- Re-enabled distributed tracker

4.27:
- Fixed bug that could send invalid information for players
- Allow pvp events to be removed by name or date from pvp stats window.
- Allow quoted playernames in command line so that realms with spaces work